--- a/index.html
+++ b/index.html
@@ -70,9 +70,13 @@
 
         <nav class="absolute top-0 w-full p-6 flex justify-between items-center z-10 max-w-7xl mx-auto">
             <span class="text-3xl font-black tracking-tighter text-yoinn-primary">YOINN</span>
-            <a href="mailto:miguel.morera.ampuero@gmail.com" class="text-sm font-bold hover:text-yoinn-primary transition-colors">
-                Contacto
-            </a>
+            <a href="https://www.yoinn.cl" 
+   class="text-sm font-bold hover:text-yoinn-primary transition-colors"
+   target="_blank" 
+   rel="noopener noreferrer">
+    ir a Yoinn.cl
+</a>
+
         </nav>
 
         <div class="z-10 max-w-4xl mx-auto space-y-6 animate-fade-in-up">
